# FHAgent

./: .gitattributes  .gitignore  CreateSimulinkEnvironmentAndTrainAgentClone.mlx  README.md  assignment_5_q3.mlx  chamberModel.mat  chamberModelTF1.mat  chamberSI.sid  ex_househeat_modeling.slx  process_data.ipynb  rlChamberEnv.slx  rlChamberEnv.slxc  rlChamberEnvClone.slx  rlChamberEnvClone.slx.original  rlChamberEnvClone.slxc  rlwatertank.slx  rlwatertank.slx.autosave  rlwatertank.slxc  rlwatertank_2.slx  rlwatertank_continuousPPO.slx  rlwatertank_continuousPPO.slxc  rlwatertank_discretePPO.slx  testChamberStability.slx  testChamberStability.slx.original  test_simulink.slxc  trainAgents.mlx  trainAgentsClone.mlx  trainChamberAgents.mlx  trainWaterTankAgents.mlx  trainWaterTankDDPGAgents.mlx  trainWaterTankPPOAgents.mlx  trainWaterTankPPOContinuousAgents.mlx
Narnia_TD3_energy/: HeatLimit.m  Narnia_model.slx  Narnia_model.slxc  Narnia_model_quadRwdFn.slx  Narnia_model_quadRwdFn.slxc  QuadraticGains.m  test_model.slx  trainNarniaSIMOTD3Agents.mlx
Narnia_TD3_pwm/: Narnia_model_quadRwdFn.slx  Narnia_model_quadRwdFn.slxc  QuadraticGains.m  estim_by_physics.mlx  trainNarniaMIMOTD3Agents.mlx
Narnia_TD3_pwmDC/: EdgeCase6ObsVarLoad.m  Narnia_PIL.slx  Narnia_PIL.slxc  Narnia_eval_model.slx  Narnia_eval_model.slxc  Narnia_model.slx  Narnia_model.slx.original  Narnia_model.slxc  evaluatePolicy.m  evaluate_agent.mlx  export_agent_evaluation.m  rlChamberEnv.slx  rlChamberEnv.slxc  serve_agent.m  serve_agent.mlx  trainNarniaTD3Agents.mlx  trainNarniaTD3Agents_pwmDC.mlx  train_agent.m  train_agent.mlx  train_agent_draft.mlx
Narnia_TD3_pwmDC/Narnia_PIL_ert_rtw/: Narnia_PIL.c  Narnia_PIL.dep  Narnia_PIL.h  Narnia_PIL.map  Narnia_PIL.mk  Narnia_PIL.rsp  Narnia_PIL_comp.rsp  Narnia_PIL_data.c  Narnia_PIL_data.dep  Narnia_PIL_private.h  Narnia_PIL_types.h  SysTickScheduler.dep  codedescriptor.dmr  codertarget_assembly_flags.mk  ert_main.c  ert_main.dep  ext_mode_types.h  m3m4m4f_multitasking.dep  main.dep  multiword_types.h  overrideHALDelay.dep  platform_timer.dep  rtiostream_serial.dep  rtmodel.h  rtwtypes.h  stm32l4xx_hal_dma_ex.dep  stm32l4xx_hal_flash.dep  stm32l4xx_hal_gpio.dep  stm32l4xx_hal_i2c.dep  stm32l4xx_hal_i2c_ex.dep  stm32l4xx_hal_msp.dep  stm32l4xx_hal_pwr.dep  stm32l4xx_hal_pwr_ex.dep  stm32l4xx_hal_rcc_ex.dep  stm32l4xx_hal_tim_ex.dep  stm32l4xx_it.dep  stm32l4xx_ll_rcc.dep  stm32l4xx_ll_usart.dep  stm32l4xx_ll_utils.dep  stm_timer_ll.dep  (+18 more)
Narnia_TD3_pwmDC/PIL/: .mxproject  script  uwg5.ioc  uwg5.ioctmprsv
Narnia_systemIdentification/: Narnia_PIL.slxc  chamberSI.sid  chamberSI2.sid  chamberSI_SSonly_session.sid  chamberSI_state_space.sid  estim_by_data.mlx  estim_by_physics.mlx  evaluate_estim_model_stability.slx  evaluate_estim_model_stability.slx.original  evaluate_estim_model_stability.slxc  evaluate_noise_model.slx  evaluate_noise_model.slxc  export_system_dynamics.asv  export_system_dynamics.m  loadDataSource.m  myfunc.m  process_data.ipynb  process_data.mlx  testChamberStability.slx  testChamberStability.slxc
Narnia_systemIdentification/Narnia_PIL_ert_rtw/: MW_target_hardware_resources.h  Narnia_PIL.bat  Narnia_PIL.c  Narnia_PIL.dep  Narnia_PIL.h  Narnia_PIL.map  Narnia_PIL.mk  Narnia_PIL.rsp  Narnia_PIL_comp.rsp  Narnia_PIL_data.c  Narnia_PIL_data.dep  Narnia_PIL_private.h  Narnia_PIL_types.h  SysTickScheduler.dep  codedescriptor.dmr  ert_main.c  ert_main.dep  ext_mode_types.h  m3m4m4f_multitasking.dep  main.dep  multiword_types.h  (+39 more)
deployment/mylib/: CMakeLists.txt  DLNetworkModel.h  SaturationActionBounder.h  ScalingLayer.cpp  ScalingLayer.h  addBiasApplyActivation.cpp  addBiasApplyActivation.h  codedescriptor.dmr  elementwiseOperationInPlace.cpp  elementwiseOperationInPlace.h  evaluatePolicy.cpp  evaluatePolicy.h  evaluatePolicy_data.cpp  evaluatePolicy_data.h  evaluatePolicy_initialize.cpp  evaluatePolicy_initialize.h  evaluatePolicy_internal_types.h  evaluatePolicy_terminate.cpp  evaluatePolicy_terminate.h  evaluatePolicy_types.h  predict.cpp  predict.h  rlDeterministicActorPolicy.h  rtw_proj.tmw  rtwtypes.h  string1.h
deployment/mylib/examples/: main.cpp  main.h
deployment/mylib/interface/: _coder_evaluatePolicy_api.cpp  _coder_evaluatePolicy_api.h  _coder_evaluatePolicy_info.cpp  _coder_evaluatePolicy_info.h  _coder_evaluatePolicy_mex.cpp  _coder_evaluatePolicy_mex.h
houseHeat_TD3_flowRate/: HeatLimit.m  evaluatePolicy.m  evaluatePolicy.prj  evaluatePolicy_mex.mexw64  ex_househeat_measured_data.xls  houseHeat_model.slx  houseHeat_model.slxc  houseHeat_model_validation.slx  houseHeat_model_validation.slxc  main.cpp  main.h  serve_agent.mlx  trainHouseHeatTD3Agents.mlx
houseHeat_TD3_flowRate/source/exe/: CMakeLists.txt  ScalingLayer.h  addBiasApplyActivation.cpp  addBiasApplyActivation.h  codedescriptor.dmr  elementwiseOperationInPlace.cpp  elementwiseOperationInPlace.h  evaluatePolicy.cpp  evaluatePolicy_data.cpp  evaluatePolicy_data.h  evaluatePolicy_initialize.cpp  evaluatePolicy_initialize.h  evaluatePolicy_internal_types.h  evaluatePolicy_terminate.cpp  predict.cpp  rlDeterministicActorPolicy.h  rtwtypes.h  string1.h
houseHeat_TD3_flowRate/source/exe/examples/: main.cpp  main.h
houseHeat_TD3_flowRate/source/exe/html/: report.mldatx
houseHeat_TD3_flowRate/source/exe/interface/: _coder_evaluatePolicy_api.cpp  _coder_evaluatePolicy_api.h  _coder_evaluatePolicy_info.cpp  _coder_evaluatePolicy_info.h
houseHeat_mTD3_PID_pwm/: complete_system.slx  predictive_house_model.slx  train_agent.mlx
report/: caltech_thesis.cls  main.tex
waterTank_DDPG_pwmDC/: rlwatertank_2.slx  rlwatertank_2.slxc  rlwatertank_3.slxc  trainWaterTankDDPGAgents.mlx
waterTank_DQN_flowRate/: trainWaterTankDQNAgents.mlx
waterTank_TD3_pwmDC/: rlwatertank_3.slx  rlwatertank_3.slxc  trainWaterTankTD3Agents.mlx
waterTank_continuousPPO_flowRate/: rlwatertank_continuousPPO.slx
waterTank_continuousPPO_pwmDC/: rlwatertank_continuousPPO.slx  trainWaterTankPPOContinuousAgents.mlx
waterTank_discretePPO_flowRate/: rlwatertank_discretePPO.slx  rlwatertank_discretePPO.slxc
(+394 files in other folders)
